k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-service
  namespace: food-app

spec:
  selector:
    app: food-website

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort
